# SibSUTI

./: .gitignore  LICENSE  README.md
2_semester/DPSA/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  test.cpp
2_semester/DPSA/include/: BaseArrFuncs.hpp  Hash.hpp  Lists.hpp  Search.hpp  Sorts.hpp
2_semester/DPSA/src/: Hash.cpp  main.cpp
2_semester/Programming/CourseWork/: CMakeLists.txt  README.md
2_semester/Programming/CourseWork/include/: Tetris.h
2_semester/Programming/CourseWork/src/: Tetris.cpp  main.cpp
2_semester/Programming/LaboratoryWorks/: .gitignore
2_semester/SDT/CourseWork/: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
2_semester/SDT/CourseWork/docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
2_semester/SDT/CourseWork/include/: gameoflife.hpp
2_semester/SDT/CourseWork/src/: gameoflife.cpp  main.cpp
2_semester/SDT/CourseWork/test/: test.cpp
2_semester/SDT/LaboratornayaWork/: .gitignore  .gitlab-ci.yml  Makefile  README.md
3_semester/DPSA/: DPSA.sln  vcpkg-configuration.json
3_semester/DPSA/CourseWork/: CourseWork.cpp  CourseWork.h  CourseWork.qrc  CourseWork.ui  CourseWork.vcxproj  CourseWork.vcxproj.filters  coding.cpp  coding.h  list.h  main.cpp  main1.cpp  printer.cpp  printer.h  queue.h  record.cpp  record.h  stdafx.h  test2.txt  tree.h  vector.h
3_semester/DPSA/CourseWorkConsole/: CourseWorkConsole.vcxproj  CourseWorkConsole.vcxproj.filters  list.h  main.cpp  printer.cpp  printer.h  record.cpp  record.h
3_semester/DPSA/CourseWork_3semester/: CourseWork_3semester.vcxproj  CourseWork_3semester.vcxproj.filters  error.h  main.c
3_semester/DPSA/Labs/: .clang-format  AVLTree.h  BTree.h  Coding.cpp  Coding.h  GraphicsTree.h  Labs.cpp  Labs.vcxproj  Labs.vcxproj.filters  OptimalSearchTree.h  String.cpp  String.h  Tree.h  chars.txt  main.cpp  shennon.txt
3_semester/IT/Lab1/: index.html  main.js
3_semester/IT/Lab2/: index.html  scripts.js
3_semester/IT/Lab3/: index.html  main.js
3_semester/IT/Lab4/: index.html  package-lock.json  script.js  scripts.js  styles.css
3_semester/IT/Lab5_and_CGW/: budget.json  package.json  server.js
3_semester/OOP/: OOP.sln
3_semester/OOP/Lab1/: Lab1.vcxproj  Lab1.vcxproj.filters  ex01.cpp  ex01.h  ex02.cpp  ex02.h  main.cpp
3_semester/OOP/Lab2/: Lab2.vcxproj  ex01.cpp  ex01.h  ex02.cpp  ex02.h
3_semester/OOP/Lab3/: ControlModule.ixx  Lab3.vcxproj  Lab3.vcxproj.filters  animal.cpp  animal.h  common.cpp  common.h  input.txt  main.cpp  model.cpp  model.h  output.txt  point.cpp  point.h  rwer.cpp  rwer.h  tPointModule.ixx
3_semester/OOP/Lab7/: Lab7.vcxproj  Lab7.vcxproj.filters  ex01.cpp  ex01.h  ex02.cpp  ex02.h  list.h  main.cpp  queue.h  stack.h
3_semester/OOP/shahmatershinik/: .gitignore  CMakeLists.txt  CMakePresets.json  game.txt
3_semester/OOP/shahmatershinik/include/: board.h  chessGame.h  network.h  piece.h  pieceTextures.h
3_semester/OOP/shahmatershinik/src/: board.cpp  chessGame.cpp  main.cpp  network.cpp  piece.cpp  pieceTextures.cpp
4_semester/ComputerNetworks/Task1/: .gitignore  new_trafik.pcapng  trafik.pcapng
4_semester/ComputerNetworks/Task2/: AstraBasalt.pcapng  MikrorikStart.pcapng  MikrorikStartOnlyDHCP.pcapng  mk-01-empty.backup  mt-01.rsc  report.docx
4_semester/ComputerNetworks/Task3/: file.pcap  report.docx
4_semester/ComputerNetworks/Task4/: AltServer.pcapng  AstraLinux.pcapng  mt-01.pcapng  mt-02.pcapng  report.docx
4_semester/ComputerNetworks/Task5/: AstraLinux.pcapng  mt01.pcapng  report.docx
4_semester/ComputerNetworks/Task6/: report.docx
DPSA/: DPSA.sln
(+183 files in other folders)
